k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-test
  namespace: devops-test
spec:
  type: ClusterIP
  selector:
    app: devops-test
  ports:
  - port: 80
    targetPort: 80
